# 2dgame

./: '  .clang-format  .gitignore  .gitmodules  App.hpp  CMakeLists.txt  compile_commands.json
.cache/clangd/index/: App.hpp.889BA8D0A193E2A8.idx  IMG.c.6542C4EC46A41BC1.idx  IMG_WIC.c.D74F1E0F96F27217.idx  IMG_avif.c.8FDD14205183953A.idx  IMG_bmp.c.C5C24CF410ECFEF1.idx  IMG_gif.c.BD0EEED4F1C68551.idx  IMG_jpg.c.CFCAADD7CACF57F4.idx  IMG_jxl.c.512AF14A8EFFC553.idx  IMG_lbm.c.B68451DDE3F01ABE.idx  IMG_pcx.c.B1FF74B74F891DF5.idx  IMG_png.c.8C49B7120F6E6C2D.idx  IMG_pnm.c.98B6940F850C0418.idx  IMG_qoi.c.0C2958F5BAB20E10.idx  IMG_stb.c.8CC557CD7F29E6CC.idx  IMG_svg.c.4EF670B128C7400C.idx  IMG_tga.c.D1850B3B11E76775.idx  IMG_tif.c.2ADDADF9433D1C12.idx  IMG_webp.c.90BDFE25860D7F56.idx  IMG_xcf.c.8503179348C338D8.idx  IMG_xpm.c.52CD0BFBF8192673.idx  IMG_xv.c.09E46EEB8C8C3442.idx  SDL.c.9A889C7A44473966.idx  SDL.h.7DAB9A388EC9D310.idx  SDL_RLEaccel.c.B3AD2DC4FFCFB0F1.idx  SDL_RLEaccel_c.h.AAB51C57D77BB2F1.idx  SDL_appid.c.0BC42B9BC5FB5ABE.idx  SDL_appid.h.9F7FBDD5B59E56A8.idx  SDL_assert.c.3AF285DE54805B57.idx  SDL_assert.h.9A92AC915C51A858.idx  (+595 more)
data/: level_one.json  textures.json  textures.toml
src/: App.cpp  App.hpp  Camera.cpp  Camera.hpp  EntityRegistry.hpp  GameState.hpp  Level.cpp  Level.hpp  Renderer.hpp  TextureManager.hpp  main.cpp
src/abstract/: Entity.cpp  Entity.hpp  Tickable.hpp
src/components/: Entity.hpp  PositionComponent.hpp  TextureComponent.hpp
src/entities/: Fireball.hpp  Player.cpp  Player.hpp
src/functions/: RectsOverlap.cpp  RectsOverlap.hpp
src/structures/: Background.hpp  RenderTexture.hpp  Vec2.hpp  WorldPosition.hpp
